2025-12-01T01:25:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19808172966 # 1338
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-01
* notice: last 14d: unq all: 41 61
* notice: prev accum: outdated-unq outdated-all / unq all: 5066 10056 / 5105 10104
* notice: next accum: outdated-unq outdated-all / unq all: 5066 10056 / 5115 10117
* notice: prev exec diff / last date diff / accum: unq all: +10 +13 -0 -0 / +10 +13 -0 -0 / 10 13
* notice: removed / changed dates: [] / [2025-11-30]

2025-11-30T12:28:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19798884497 # 1337
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-30
* notice: last 14d: unq all: 34 48
* notice: prev accum: outdated-unq outdated-all / unq all: 5065 10055 / 5105 10104
* notice: next accum: outdated-unq outdated-all / unq all: 5066 10056 / 5105 10104
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-16] / []

2025-11-30T01:20:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19791904446 # 1336
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-30
* notice: last 14d: unq all: 34 49
* notice: prev accum: outdated-unq outdated-all / unq all: 5063 10051 / 5099 10097
* notice: next accum: outdated-unq outdated-all / unq all: 5065 10055 / 5105 10104
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -0 / +12 +15 -0 -0 / 12 15
* notice: removed / changed dates: [2025-11-15] / [2025-11-29]

2025-11-29T12:29:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19783879425 # 1335