@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-01T01:25:12Z",
-  "count_outdated" : 10056,
-  "uniques_outdated" : 5066,
+  "timestamp" : "2025-12-01T12:33:20Z",
+  "count_outdated" : 10065,
+  "uniques_outdated" : 5074,
   "count" : 10117,
   "uniques" : 5115,
   "clones" : [
-    {
-      "timestamp": "2025-11-17T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "count_decinc": [ 0, 9 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ],
-      "uniques_decinc": [ 0, 8 ]
-    },
     {
       "timestamp": "2025-11-19T00:00:00Z",
       "count": 4,
