@@ -1,12 +1,7 @@
 {
-  "count": 61,
-  "uniques": 41,
+  "count": 52,
+  "uniques": 34,
   "clones": [
-    {
-      "timestamp": "2025-11-17T00:00:00Z",
-      "count": 9,
-      "uniques": 8
-    },
     {
       "timestamp": "2025-11-19T00:00:00Z",
       "count": 4,
