@@ -1,3 +1,12 @@
+2025-12-01T12:33:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19822789807 # 1339
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-01
+* notice: last 14d: unq all: 34 52
+* notice: prev accum: outdated-unq outdated-all / unq all: 5066 10056 / 5115 10117
+* notice: next accum: outdated-unq outdated-all / unq all: 5074 10065 / 5115 10117
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-17] / []
+
 2025-12-01T01:25:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19808172966 # 1338
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-01
